Addion of the price plan card component and fix for spacing for pricing sections

--- a/components/PricePlanToggleButton/index.module.scss
+++ b/components/PricePlanToggleButton/index.module.scss
@@ -2,7 +2,7 @@
 
 .pricePlanToggleWrapper {
 	width: 31rem;
-	height: max-content;
+	height: 4rem;
 	background: $grey-3;
 	color: $prim_dark_2;
 	display: flex;
@@ -28,15 +28,15 @@
 	justify-content: center;
 	text-align: start;
 	width: 16rem;
-
+	height: 100%;
 	p {
 		font-size: $fontsize_content_12;
-		margin: 0;
+		margin: 0 !important;
 	}
 
 	small {
 		font-size: $fontsize_content_10;
-		margin: 0;
+		margin: 0 !important;
 	}
 
 	&__Active {
@@ -44,6 +44,7 @@
 		border: 1px solid $blue_7;
 		width: 16rem;
 		border-radius: 25px;
+		height: 100%;
 		@media only screen and(max-width: 500px) {
 			width: 16rem;
 		}
