--- a/containers/Pricing/PricingPlansSection/index.module.scss
+++ b/containers/Pricing/PricingPlansSection/index.module.scss
@@ -55,3 +55,8 @@
 		flex-direction: column;
 	}
 }
+
+.contactInfoSection {
+	margin: 10rem auto;
+	margin-bottom: 20rem;
+}
